@@ -1,4 +1,7 @@
-﻿wersja 9.5.9 - 2021-09-15
+﻿wersja 9.6.0 - 2021-09-15
+- poprawka dla serwisu PlayerPL
+
+wersja 9.5.9 - 2021-09-15
 - naprawiono błąd utkniecia w pętli przy aktualizacji skórek
 - poprawka logowania do serwisu Polsat GO
 - poprawka prośby o odnowienie logowania do PlayerPL
